--- a/snake.html
+++ b/snake.html
@@ -1,195 +1,147 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Snake: Neon Survival!</title>
-<link rel="icon" href="snakelogo.png" type="image/x-icon">
-<style>
-  body, html {
-    margin: 0; padding: 0; height: 100%;
-    font-family: monospace;
-    background: black;
-    color: #0f0;
-    overflow: hidden;
-  }
-  #game {
-    display: block;
-    margin: 20px auto;
-    border: 2px solid #0f0;
-    background: #111;
-    border-radius: 10px;
-  }
-  #menuOverlay {
-    position: fixed;
-    top: 0; left: 0; right: 0; bottom: 0;
-    background: black;
-    z-index: 1000;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: #0f0;
-    font-size: 18px;
-  }
-  #menuContent {
-    position: relative;
-    width: 400px;
-    background: rgba(0,30,0,0.8);
-    border: 2px solid #0f0;
-    border-radius: 10px;
-    padding: 20px;
-    box-sizing: border-box;
-    text-align: center;
-    backdrop-filter: blur(5px);
-    overflow: hidden;
-  }
-  #menuContent h1 {
-    margin-top: 0;
-    font-size: 32px;
-    text-shadow: 0 0 8px #0f0;
-  }
-  #menuContent ul {
-    text-align: left;
-    margin: 10px 0 20px 0;
-    padding-left: 20px;
-  }
-  #menuContent button, #menuContent input[type=color] {
-    font-size: 18px;
-    padding: 10px 20px;
-    margin-top: 10px;
-    cursor: pointer;
-    border: none;
-    border-radius: 5px;
-    background: #0f0;
-    color: black;
-    transition: background-color 0.3s ease;
-  }
-  #menuContent button:hover {
-    background: #0c0;
-  }
-  #gameOverMessage {
-    font-size: 36px;
-    margin-bottom: 10px;
-    text-shadow: 0 0 12px #f00;
-  }
-  #gameOverScore {
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-  #gameOverButtons button {
-    margin: 0 10px;
-  }
-  #musicToggle {
-    position: fixed;
-    top: 10px; right: 10px;
-    background: #0f0;
-    border: none;
-    padding: 8px 12px;
-    font-size: 14px;
-    border-radius: 5px;
-    cursor: pointer;
-    z-index: 1100;
-  }
-  /* Fond animé lignes vertes */
-  #menuCanvas {
-    position: absolute;
-    top:0; left:0; width:100%; height:100%; 
-    pointer-events: none;
-    z-index: 0;
-  }
-
-  /* === Contrôles tactiles === */
-  #touchControls {
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 1100;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  #touchControls .horizontal {
-    display: flex;
-    gap: 20px;
-    margin-top: 10px;
-  }
-  #touchControls .arrow {
-    background: #0f0;
-    color: black;
-    font-size: 24px;
-    width: 60px;
-    height: 60px;
-    border: none;
-    border-radius: 12px;
-    box-shadow: 0 0 10px #0f0;
-    cursor: pointer;
-    user-select: none;
-    font-weight: bold;
-  }
-  #touchControls .arrow:active {
-    background: #0c0;
-  }
-  @media (min-width: 800px) {
-    #touchControls {
-      display: none;
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Snake: Neon Survival!</title>
+  <link rel="icon" href="snakelogo.png" type="image/x-icon">
+  <style>
+    body, html {
+      margin: 0; padding: 0; height: 100%;
+      font-family: monospace;
+      background: black;
+      color: #0f0;
+      overflow: hidden;
     }
-  }
-</style>
+    #game {
+      display: block;
+      margin: 20px auto;
+      border: 2px solid #0f0;
+      background: #111;
+      border-radius: 10px;
+    }
+    #menuOverlay {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: black;
+      z-index: 1000;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      color: #0f0;
+      font-size: 18px;
+    }
+    #menuOverlay.active + #touchControls {
+      display: none !important;
+    }
+    #menuContent {
+      position: relative;
+      width: 400px;
+      background: rgba(0,30,0,0.8);
+      border: 2px solid #0f0;
+      border-radius: 10px;
+      padding: 20px;
+      box-sizing: border-box;
+      text-align: center;
+      backdrop-filter: blur(5px);
+      overflow: hidden;
+    }
+    #menuContent h1 {
+      margin-top: 0;
+      font-size: 32px;
+      text-shadow: 0 0 8px #0f0;
+    }
+    #menuContent ul {
+      text-align: left;
+      margin: 10px 0 20px 0;
+      padding-left: 20px;
+    }
+    #menuContent button, #menuContent input[type=color] {
+      font-size: 18px;
+      padding: 10px 20px;
+      margin-top: 10px;
+      cursor: pointer;
+      border: none;
+      border-radius: 5px;
+      background: #0f0;
+      color: black;
+      transition: background-color 0.3s ease;
+    }
+    #menuContent button:hover {
+      background: #0c0;
+    }
+    #gameOverMessage {
+      font-size: 36px;
+      margin-bottom: 10px;
+      text-shadow: 0 0 12px #f00;
+    }
+    #gameOverScore {
+      font-size: 24px;
+      margin-bottom: 20px;
+    }
+    #gameOverButtons button {
+      margin: 0 10px;
+    }
+    #musicToggle {
+      position: fixed;
+      top: 10px; right: 10px;
+      background: #0f0;
+      border: none;
+      padding: 8px 12px;
+      font-size: 14px;
+      border-radius: 5px;
+      cursor: pointer;
+      z-index: 1100;
+    }
+    #menuCanvas {
+      position: absolute;
+      top:0; left:0; width:100%; height:100%; 
+      pointer-events: none;
+      z-index: 0;
+    }
+
+    @media (min-width: 801px) {
+      #touchControls {
+        display: none;
+      }
+    }
+  </style>
 </head>
 <body>
-
 <canvas id="game" width="800" height="500" tabindex="0" aria-label="Zone de jeu Snake"></canvas>
 
 <div id="menuOverlay">
   <canvas id="menuCanvas"></canvas>
-  <div id="menuContent" role="dialog" aria-modal="true" aria-labelledby="menuTitle">
-    <!-- Contenu menu dynamique -->
-  </div>
+  <div id="menuContent" role="dialog" aria-modal="true" aria-labelledby="menuTitle"></div>
 </div>
 
 <button id="musicToggle" aria-label="Basculer musique de fond">🔈</button>
 
-<!-- === Contrôles tactiles === -->
-<div id="touchControls" aria-hidden="false">
-  <button data-key="ArrowUp" class="arrow up">▲</button>
-  <div class="horizontal">
-    <button data-key="ArrowLeft" class="arrow left">◀</button>
-    <button data-key="ArrowDown" class="arrow down">▼</button>
-    <button data-key="ArrowRight" class="arrow right">▶</button>
-  </div>
-</div>
-
 <script>
-// === Variables globales ===
 const canvas = document.getElementById('game');
 const ctx = canvas.getContext('2d');
 
 const box = 20;
-const width = canvas.width;
-const height = canvas.height;
-
 let snake = [{ x: 9 * box, y: 10 * box }];
 let direction = 'RIGHT';
 let food = {};
 let score = 0;
 let obstacles = [];
 const obstacleCount = 7;
-
 let game = null;
 let snakeColor = '#00ff00';
 
 const menuOverlay = document.getElementById('menuOverlay');
 const menuContent = document.getElementById('menuContent');
-
 const musicToggle = document.getElementById('musicToggle');
 
 const menuCanvas = document.getElementById('menuCanvas');
 const menuCtx = menuCanvas.getContext('2d');
 menuCanvas.width = menuOverlay.clientWidth;
 menuCanvas.height = menuOverlay.clientHeight;
-// === Fond animé lignes vertes ===
+
+// Fond animé
 const linesCount = 30;
 let lines = [];
 for(let i=0; i<linesCount; i++){
@@ -216,12 +168,10 @@ function animateMenuBg(){
 }
 animateMenuBg();
 
-// === Fonctions du jeu ===
-
 function randomPos() {
   return {
-    x: Math.floor(Math.random() * (width / box)) * box,
-    y: Math.floor(Math.random() * (height / box)) * box
+    x: Math.floor(Math.random() * (canvas.width / box)) * box,
+    y: Math.floor(Math.random() * (canvas.height / box)) * box
   };
 }
 
@@ -269,9 +219,7 @@ function drawFood() {
 
 function drawObstacles() {
   ctx.fillStyle = 'gray';
-  obstacles.forEach(o => {
-    ctx.fillRect(o.x, o.y, box, box);
-  });
+  obstacles.forEach(o => ctx.fillRect(o.x, o.y, box, box));
 }
 
 function collision(pos, array) {
@@ -282,8 +230,6 @@ function gameOver() {
   clearInterval(game);
   showGameOver(score);
 }
-
-// === Menu et gestion du jeu ===
 
 function startGame() {
   hideMenu();
@@ -298,16 +244,18 @@ function startGame() {
 
 function showMenu() {
   menuOverlay.style.display = 'flex';
+  menuOverlay.classList.add('active');
 }
 
 function hideMenu() {
   menuOverlay.style.display = 'none';
+  menuOverlay.classList.remove('active');
 }
 
 function loadMenu() {
   showMenu();
   menuContent.innerHTML = `
-  <img src = "snakelogo.png" width="100px" height="auto">
+    <img src="snakelogo.png" width="100px">
     <h1 id="menuTitle">Menu</h1>
     <p>Bienvenue ! Voici les règles :</p>
     <ul>
@@ -321,15 +269,11 @@ function loadMenu() {
     <br/>
     <button id="startBtn">Jouer</button>
   `;
-
-  const startBtnNew = document.getElementById('startBtn');
-  const colorPickerNew = document.getElementById('colorPicker');
-
-  startBtnNew.onclick = () => {
-    snakeColor = colorPickerNew.value;
+  document.getElementById('startBtn').onclick = () => {
+    snakeColor = document.getElementById('colorPicker').value;
     startGame();
   };
-  colorPickerNew.oninput = e => {
+  document.getElementById('colorPicker').oninput = e => {
     snakeColor = e.target.value;
   };
 }
@@ -344,15 +288,9 @@ function showGameOver(finalScore){
       <button id="returnMenuBtn">Retour au menu</button>
     </div>
   `;
-  document.getElementById('replayBtn').onclick = () => {
-    startGame();
-  };
-  document.getElementById('returnMenuBtn').onclick = () => {
-    loadMenu();
-  };
+  document.getElementById('replayBtn').onclick = () => startGame();
+  document.getElementById('returnMenuBtn').onclick = () => loadMenu();
 }
-
-// === Boucle principale ===
 
 function gameLoop() {
   let headX = snake[0].x;
@@ -363,22 +301,11 @@ function gameLoop() {
   else if(direction === 'UP') headY -= box;
   else if(direction === 'DOWN') headY += box;
 
-  if(headX < 0 || headX >= width || headY < 0 || headY >= height) {
-    gameOver();
-    return;
-  }
+  if(headX < 0 || headX >= canvas.width || headY < 0 || headY >= canvas.height) return gameOver();
 
-  let newHead = {x: headX, y: headY};
+  const newHead = {x: headX, y: headY};
 
-  if(collision(newHead, snake)) {
-    gameOver();
-    return;
-  }
-
-  if(collision(newHead, obstacles)) {
-    gameOver();
-    return;
-  }
+  if(collision(newHead, snake) || collision(newHead, obstacles)) return gameOver();
 
   snake.unshift(newHead);
 
@@ -389,7 +316,7 @@ function gameLoop() {
     snake.pop();
   }
 
-  ctx.clearRect(0, 0, width, height);
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
   drawSnake();
   drawFood();
   drawObstacles();
@@ -399,8 +326,6 @@ function gameLoop() {
   ctx.fillText(`Score: ${score}`, 10, 25);
 }
 
-// === Contrôles clavier ===
-
 document.addEventListener('keydown', e => {
   if(menuOverlay.style.display === 'flex') return;
   if(e.key === 'ArrowLeft' && direction !== 'RIGHT') direction = 'LEFT';
@@ -409,42 +334,37 @@ document.addEventListener('keydown', e => {
   else if(e.key === 'ArrowDown' && direction !== 'UP') direction = 'DOWN';
 });
 
-// === Contrôles tactiles ===
-document.querySelectorAll('#touchControls .arrow').forEach(btn => {
-  btn.addEventListener('touchstart', e => {
-    e.preventDefault();
-    const key = btn.dataset.key;
-    const event = new KeyboardEvent('keydown', { key });
-    document.dispatchEvent(event);
-  }, { passive: false });
-});
-
-// === Obstacles et nourriture au chargement ===
-
 generateObstacles();
 placeFood();
 
-// === Gestion musique de fond ===
+// Musique
 const audio = new Audio('level-iv-339695.mp3');
 audio.loop = true;
 audio.volume = 0.05;
 let musicOn = false;
 
 musicToggle.onclick = () => {
-  if(musicOn){
-    audio.pause();
-    musicToggle.textContent = '🔈';
-    musicOn = false;
-  } else {
-    audio.play();
-    musicToggle.textContent = '🔊';
-    musicOn = true;
-  }
+  musicOn = !musicOn;
+  musicToggle.textContent = musicOn ? '🔊' : '🔈';
+  musicOn ? audio.play() : audio.pause();
 };
 
-// === Initialisation ===
+// Redimension automatique mobile/tablette
+function resizeCanvasForDevice() {
+  const isMobile = window.innerWidth < 801;
+  if (isMobile) {
+    canvas.width = Math.min(window.innerWidth - 40, 600);
+    canvas.height = Math.floor(canvas.width * 0.625);
+  } else {
+    canvas.width = 800;
+    canvas.height = 500;
+  }
+}
+resizeCanvasForDevice();
+window.addEventListener('resize', resizeCanvasForDevice);
+
+// Menu initial
 loadMenu();
 </script>
-
 </body>
 </html>
