--- a/snake.html
+++ b/snake.html
@@ -1,112 +1,137 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Snake: Neon Survival!</title>
-  <link rel="icon" href="snakelogo.png" type="image/x-icon">
-  <style>
-    body, html {
-      margin: 0; padding: 0; height: 100%;
-      font-family: monospace;
-      background: black;
-      color: #0f0;
-      overflow: hidden;
-    }
-    #game {
-      display: block;
-      margin: 20px auto;
-      border: 2px solid #0f0;
-      background: #111;
-      border-radius: 10px;
-    }
-    #menuOverlay {
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: black;
-      z-index: 1000;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      color: #0f0;
-      font-size: 18px;
-    }
-    #menuOverlay.active + #touchControls {
-      display: none !important;
-    }
-    #menuContent {
-      position: relative;
-      width: 400px;
-      background: rgba(0,30,0,0.8);
-      border: 2px solid #0f0;
-      border-radius: 10px;
-      padding: 20px;
-      box-sizing: border-box;
-      text-align: center;
-      backdrop-filter: blur(5px);
-      overflow: hidden;
-    }
-    #menuContent h1 {
-      margin-top: 0;
-      font-size: 32px;
-      text-shadow: 0 0 8px #0f0;
-    }
-    #menuContent ul {
-      text-align: left;
-      margin: 10px 0 20px 0;
-      padding-left: 20px;
-    }
-    #menuContent button, #menuContent input[type=color] {
-      font-size: 18px;
-      padding: 10px 20px;
-      margin-top: 10px;
-      cursor: pointer;
-      border: none;
-      border-radius: 5px;
-      background: #0f0;
-      color: black;
-      transition: background-color 0.3s ease;
-    }
-    #menuContent button:hover {
-      background: #0c0;
-    }
-    #gameOverMessage {
-      font-size: 36px;
-      margin-bottom: 10px;
-      text-shadow: 0 0 12px #f00;
-    }
-    #gameOverScore {
-      font-size: 24px;
-      margin-bottom: 20px;
-    }
-    #gameOverButtons button {
-      margin: 0 10px;
-    }
-    #musicToggle {
-      position: fixed;
-      top: 10px; right: 10px;
-      background: #0f0;
-      border: none;
-      padding: 8px 12px;
-      font-size: 14px;
-      border-radius: 5px;
-      cursor: pointer;
-      z-index: 1100;
-    }
-    #menuCanvas {
-      position: absolute;
-      top:0; left:0; width:100%; height:100%; 
-      pointer-events: none;
-      z-index: 0;
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Snake: Neon Survival!</title>
+<link rel="icon" href="snakelogo.png" type="image/x-icon">
+<style>
+  body, html {
+    margin: 0; padding: 0; height: 100%;
+    font-family: monospace;
+    background: black;
+    color: #0f0;
+    overflow: hidden;
+  }
+  #game {
+    display: block;
+    margin: 20px auto;
+    border: 2px solid #0f0;
+    background: #111;
+    border-radius: 10px;
+  }
+  #menuOverlay {
+    position: fixed;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background: black;
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #0f0;
+    font-size: 18px;
+  }
+  #menuOverlay.active + #touchControls {
+    display: none !important;
+  }
+  #menuContent {
+    position: relative;
+    width: 400px;
+    background: rgba(0,30,0,0.8);
+    border: 2px solid #0f0;
+    border-radius: 10px;
+    padding: 20px;
+    box-sizing: border-box;
+    text-align: center;
+    backdrop-filter: blur(5px);
+    overflow: hidden;
+  }
+  #menuContent h1 {
+    margin-top: 0;
+    font-size: 32px;
+    text-shadow: 0 0 8px #0f0;
+  }
+  #menuContent ul {
+    text-align: left;
+    margin: 10px 0 20px 0;
+    padding-left: 20px;
+  }
+  #menuContent button, #menuContent input[type=color], #menuContent input[type=number] {
+    font-size: 18px;
+    padding: 10px 20px;
+    margin-top: 10px;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+    background: #0f0;
+    color: black;
+    transition: background-color 0.3s ease;
+  }
+  #menuContent button:hover {
+    background: #0c0;
+  }
+  #gameOverMessage {
+    font-size: 36px;
+    margin-bottom: 10px;
+    text-shadow: 0 0 12px #f00;
+  }
+  #gameOverScore {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+  #gameOverButtons button {
+    margin: 0 10px;
+  }
+  #musicToggle {
+    position: fixed;
+    top: 10px; right: 10px;
+    background: #0f0;
+    border: none;
+    padding: 8px 12px;
+    font-size: 14px;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 1100;
+  }
+  #menuCanvas {
+    position: absolute;
+    top:0; left:0; width:100%; height:100%; 
+    pointer-events: none;
+    z-index: 0;
+  }
+  #countdownOverlay {
+    position: fixed;
+    top:0; left:0; right:0; bottom:0;
+    background: rgba(0,0,0,0.85);
+    color: #0f0;
+    font-size: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1200;
+    font-weight: bold;
+    font-family: monospace;
+  }
+  #pauseButton {
+    position: fixed;
+    top: 10px; left: 10px;
+    background: #0f0;
+    border: none;
+    padding: 8px 12px;
+    font-size: 14px;
+    border-radius: 5px;
+    cursor: pointer;
+    z-index: 1100;
+    display: none;
+  }
 
-    @media (min-width: 801px) {
-      #touchControls {
-        display: none;
-      }
+  @media (min-width: 801px) {
+    #touchControls {
+      display: none;
     }
-  </style>
+  }
+</style>
 </head>
 <body>
 <canvas id="game" width="800" height="500" tabindex="0" aria-label="Zone de jeu Snake"></canvas>
@@ -117,6 +142,9 @@
 </div>
 
 <button id="musicToggle" aria-label="Basculer musique de fond">🔈</button>
+<button id="pauseButton" aria-label="Pause">Pause</button>
+
+<div id="countdownOverlay" style="display:none;"></div>
 
 <script>
 const canvas = document.getElementById('game');
@@ -128,20 +156,22 @@ let direction = 'RIGHT';
 let food = {};
 let score = 0;
 let obstacles = [];
-const obstacleCount = 7;
+let obstacleCount = 7; // Variable modifiable au menu pause/menu
 let game = null;
 let snakeColor = '#00ff00';
 
 const menuOverlay = document.getElementById('menuOverlay');
 const menuContent = document.getElementById('menuContent');
 const musicToggle = document.getElementById('musicToggle');
+const pauseButton = document.getElementById('pauseButton');
+const countdownOverlay = document.getElementById('countdownOverlay');
 
 const menuCanvas = document.getElementById('menuCanvas');
 const menuCtx = menuCanvas.getContext('2d');
 menuCanvas.width = menuOverlay.clientWidth;
 menuCanvas.height = menuOverlay.clientHeight;
 
-// Fond animé
+// Fond animé du menu
 const linesCount = 30;
 let lines = [];
 for(let i=0; i<linesCount; i++){
@@ -229,22 +259,43 @@ function collision(pos, array) {
 function gameOver() {
   clearInterval(game);
   showGameOver(score);
+  pauseButton.style.display = 'none';
 }
 
 function startGame() {
   hideMenu();
-  snake = [{ x: 9 * box, y: 10 * box }];
-  direction = 'RIGHT';
-  score = 0;
-  generateObstacles();
-  placeFood();
-  game = setInterval(gameLoop, 100);
-  canvas.focus();
+  countdownOverlay.style.display = 'flex';
+  let countdown = 3;
+  countdownOverlay.textContent = countdown;
+  pauseButton.style.display = 'block';
+
+  // Cache flèches tactiles si tu en avais
+  const touchControls = document.getElementById('touchControls');
+  if(touchControls) touchControls.style.display = 'none';
+
+  // Compte à rebours 3s avant démarrer
+  const countdownInterval = setInterval(() => {
+    countdown--;
+    if(countdown === 0){
+      countdownOverlay.style.display = 'none';
+      clearInterval(countdownInterval);
+      snake = [{ x: 9 * box, y: 10 * box }];
+      direction = 'RIGHT';
+      score = 0;
+      generateObstacles();
+      placeFood();
+      game = setInterval(gameLoop, 100);
+      canvas.focus();
+    } else {
+      countdownOverlay.textContent = countdown;
+    }
+  }, 1000);
 }
 
 function showMenu() {
   menuOverlay.style.display = 'flex';
   menuOverlay.classList.add('active');
+  pauseButton.style.display = 'none';
 }
 
 function hideMenu() {
@@ -255,61 +306,119 @@ function hideMenu() {
 function loadMenu() {
   showMenu();
   menuContent.innerHTML = `
-    <img src="snakelogo.png" width="100px">
-    <h1 id="menuTitle">Menu</h1>
-    <p>Bienvenue ! Voici les règles :</p>
+    <h1 id="menuTitle">Snake Néon Vert</h1>
+    <p>Règles :</p>
     <ul>
-      <li>Utilisez les flèches pour déplacer le serpent.</li>
+      <li>Déplacez le serpent avec les flèches clavier ou les boutons tactiles.</li>
       <li>Évitez les obstacles gris.</li>
-      <li>Ne touchez pas les bords, sinon c'est Game Over.</li>
-      <li>Ramassez la nourriture rouge pour grandir et marquer des points.</li>
+      <li>Mangez la nourriture rouge pour grandir.</li>
+      <li>Vous pouvez changer la couleur du serpent.</li>
+      <li>Appuyez sur "P" ou le bouton pause pour mettre en pause.</li>
     </ul>
-    <label for="colorPicker">Choisissez la couleur du serpent :</label><br/>
-    <input type="color" id="colorPicker" value="${snakeColor}" aria-label="Choix de la couleur du serpent"/>
-    <br/>
+    <label for="colorPicker">Couleur serpent :</label><br/>
+    <input type="color" id="colorPicker" value="${snakeColor}" aria-label="Choix couleur serpent"><br/>
+    <label for="obstacleCountInput">Nombre d'obstacles (1-15) :</label><br/>
+    <input type="number" id="obstacleCountInput" min="1" max="15" value="${obstacleCount}" aria-label="Nombre d'obstacles"><br/><br/>
     <button id="startBtn">Jouer</button>
   `;
+
   document.getElementById('startBtn').onclick = () => {
     snakeColor = document.getElementById('colorPicker').value;
+    let count = parseInt(document.getElementById('obstacleCountInput').value);
+    if (isNaN(count) || count < 1) count = 1;
+    else if (count > 15) count = 15;
+    obstacleCount = count;
     startGame();
-  };
-  document.getElementById('colorPicker').oninput = e => {
-    snakeColor = e.target.value;
   };
 }
 
-function showGameOver(finalScore){
-  showMenu();
+function showPauseMenu() {
+  clearInterval(game);
+  menuOverlay.style.display = 'flex';
+  menuOverlay.classList.add('active');
+  pauseButton.style.display = 'none';
+
   menuContent.innerHTML = `
-    <div id="gameOverMessage" role="alert" aria-live="assertive">GAME OVER</div>
-    <div id="gameOverScore">Votre score : ${finalScore}</div>
+    <h1>Pause</h1>
+    <label for="colorPickerPause">Couleur serpent :</label><br/>
+    <input type="color" id="colorPickerPause" value="${snakeColor}" aria-label="Choix couleur serpent"><br/>
+    <label for="obstacleCountPause">Nombre d'obstacles (1-15) :</label><br/>
+    <input type="number" id="obstacleCountPause" min="1" max="15" value="${obstacleCount}" aria-label="Nombre d'obstacles"><br/><br/>
+    <button id="resumeBtn">Reprendre</button>
+    <button id="menuBtn">Retour au menu</button>
+  `;
+
+  document.getElementById('resumeBtn').onclick = () => {
+    snakeColor = document.getElementById('colorPickerPause').value;
+    let count = parseInt(document.getElementById('obstacleCountPause').value);
+    if (isNaN(count) || count < 1) count = 1;
+    else if (count > 15) count = 15;
+    obstacleCount = count;
+    generateObstacles();
+    placeFood();
+    game = setInterval(gameLoop, 100);
+    menuOverlay.style.display = 'none';
+    menuOverlay.classList.remove('active');
+    pauseButton.style.display = 'block';
+    canvas.focus();
+  };
+
+  document.getElementById('menuBtn').onclick = () => {
+    loadMenu();
+  };
+}
+
+function showGameOver(finalScore) {
+  menuOverlay.style.display = 'flex';
+  menuOverlay.classList.add('active');
+  pauseButton.style.display = 'none';
+
+  menuContent.innerHTML = `
+    <div id="gameOverMessage">Game Over</div>
+    <div id="gameOverScore">Score : ${finalScore}</div>
     <div id="gameOverButtons">
-      <button id="replayBtn">Rejouer</button>
-      <button id="returnMenuBtn">Retour au menu</button>
+      <button id="retryBtn">Rejouer</button>
+      <button id="menuBtnGameOver">Retour au menu</button>
     </div>
   `;
-  document.getElementById('replayBtn').onclick = () => startGame();
-  document.getElementById('returnMenuBtn').onclick = () => loadMenu();
+
+  document.getElementById('retryBtn').onclick = () => {
+    startGame();
+  };
+  document.getElementById('menuBtnGameOver').onclick = () => {
+    loadMenu();
+  };
 }
 
 function gameLoop() {
-  let headX = snake[0].x;
-  let headY = snake[0].y;
+  // Boucle du jeu principale, ici on ne modifie pas la logique collision ou serpent
 
-  if(direction === 'LEFT') headX -= box;
-  else if(direction === 'RIGHT') headX += box;
-  else if(direction === 'UP') headY -= box;
-  else if(direction === 'DOWN') headY += box;
+  // Calcul nouvelle tête serpent
+  let head = { ...snake[0] };
+  if (direction === 'LEFT') head.x -= box;
+  else if (direction === 'RIGHT') head.x += box;
+  else if (direction === 'UP') head.y -= box;
+  else if (direction === 'DOWN') head.y += box;
 
-  if(headX < 0 || headX >= canvas.width || headY < 0 || headY >= canvas.height) return gameOver();
+  // Collision murs
+  if (head.x < 0 || head.x >= canvas.width || head.y < 0 || head.y >= canvas.height) {
+    gameOver();
+    return;
+  }
+  // Collision avec obstacles
+  if (collision(head, obstacles)) {
+    gameOver();
+    return;
+  }
+  // Collision avec corps serpent
+  if (collision(head, snake)) {
+    gameOver();
+    return;
+  }
 
-  const newHead = {x: headX, y: headY};
+  snake.unshift(head);
 
-  if(collision(newHead, snake) || collision(newHead, obstacles)) return gameOver();
-
-  snake.unshift(newHead);
-
-  if(newHead.x === food.x && newHead.y === food.y) {
+  if (head.x === food.x && head.y === food.y) {
     score++;
     placeFood();
   } else {
@@ -317,54 +426,55 @@ function gameLoop() {
   }
 
   ctx.clearRect(0, 0, canvas.width, canvas.height);
-  drawSnake();
-  drawFood();
   drawObstacles();
+  drawFood();
+  drawSnake();
 
+  // Affichage score
   ctx.fillStyle = '#0f0';
-  ctx.font = '20px monospace';
-  ctx.fillText(`Score: ${score}`, 10, 25);
+  ctx.font = '18px monospace';
+  ctx.fillText(`Score: ${score}`, 10, 20);
 }
 
-document.addEventListener('keydown', e => {
-  if(menuOverlay.style.display === 'flex') return;
-  if(e.key === 'ArrowLeft' && direction !== 'RIGHT') direction = 'LEFT';
-  else if(e.key === 'ArrowRight' && direction !== 'LEFT') direction = 'RIGHT';
-  else if(e.key === 'ArrowUp' && direction !== 'DOWN') direction = 'UP';
-  else if(e.key === 'ArrowDown' && direction !== 'UP') direction = 'DOWN';
+// Gestion direction clavier + tactile (flèches cachées en jeu)
+window.addEventListener('keydown', e => {
+  if (e.key === 'ArrowLeft' && direction !== 'RIGHT') direction = 'LEFT';
+  else if (e.key === 'ArrowRight' && direction !== 'LEFT') direction = 'RIGHT';
+  else if (e.key === 'ArrowUp' && direction !== 'DOWN') direction = 'UP';
+  else if (e.key === 'ArrowDown' && direction !== 'UP') direction = 'DOWN';
+  else if (e.key.toLowerCase() === 'p') {
+    if (game) {
+      showPauseMenu();
+    }
+  }
 });
 
-generateObstacles();
-placeFood();
-
-// Musique
-const audio = new Audio('level-iv-339695.mp3');
-audio.loop = true;
-audio.volume = 0.05;
-let musicOn = false;
-
-musicToggle.onclick = () => {
-  musicOn = !musicOn;
-  musicToggle.textContent = musicOn ? '🔊' : '🔈';
-  musicOn ? audio.play() : audio.pause();
+// Bouton pause visible sur mobile et desktop
+pauseButton.onclick = () => {
+  if (game) {
+    showPauseMenu();
+  }
 };
 
-// Redimension automatique mobile/tablette
-function resizeCanvasForDevice() {
-  const isMobile = window.innerWidth < 801;
-  if (isMobile) {
-    canvas.width = Math.min(window.innerWidth - 40, 600);
-    canvas.height = Math.floor(canvas.width * 0.625);
+// Gestion musique de fond simple
+let musicPlaying = false;
+let audio = new Audio('https://cdn.pixabay.com/download/audio/2022/03/25/audio_3ae908ee31.mp3?filename=calm-ambient-background-11047.mp3');
+audio.loop = true;
+musicToggle.onclick = () => {
+  if (musicPlaying) {
+    audio.pause();
+    musicToggle.textContent = '🔈';
   } else {
-    canvas.width = 800;
-    canvas.height = 500;
+    audio.play();
+    musicToggle.textContent = '🔊';
   }
-}
-resizeCanvasForDevice();
-window.addEventListener('resize', resizeCanvasForDevice);
+  musicPlaying = !musicPlaying;
+};
 
-// Menu initial
+// Au chargement, on lance le menu
 loadMenu();
+
 </script>
+
 </body>
 </html>
